--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,38 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.aseniuk.aseniuk_countbook.MainActivity">
+    android:padding="20dp"
+    android:orientation="vertical"
+    tools:context="com.example.aseniuk.aseniuk_countbook.MainActivity"
+    android:gravity="center|top">
 
-    <TextView
-        android:layout_width="174dp"
-        android:layout_height="83dp"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="56dp"
-        app:layout_constraintVertical_bias="0.502" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="278dp"
-        android:layout_height="47dp"
-        android:text="Add Counter"
-        tools:layout_editor_absoluteX="53dp"
-        tools:layout_editor_absoluteY="46dp"
-        android:onClick = "addCounterClicked"/>
+        <Button
+            android:id="@+id/AddCounterButton"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
 
-    /*reset button*/
-    <Button
-            android:id="@+id/button"
-            android:layout_width="278dp"
-            android:layout_height="47dp"
             android:text="Add Counter"
-            tools:layout_editor_absoluteX="53dp"
-            tools:layout_editor_absoluteY="46dp"
-            android:onClick = "addCounterClicked"/>
-</android.support.constraint.ConstraintLayout>
+            android:layout_marginBottom="60dp"
+            android:onClick="addCounterButtonClicked"
+            android:layout_weight="0.1"
+            android:textStyle="bold"
+            android:textSize="15sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_centerHorizontal="true"
+        android:orientation="horizontal"
+        android:gravity="right"
+        android:weightSum="1">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Number of counters: "
+            android:textSize="20sp"
+            android:id="@+id/firstTextBox"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0"
+            android:textSize="100sp"
+            android:id="@+id/counterTextView"/>
+
+
+    </LinearLayout>
+
+
+</LinearLayout>
